Completed management of auth tokens
