# lib/endpoints/originators.js
@@ -132,6 +132,7 @@ function storePreSharedKey(req, res, operationId, callback) {
     const originatorAddress = req.params.address;
     const accountAddress = req.params.account;
     let psk = req.body.preSharedKey || null;
+    req.body.preSharedKey = undefined;
     let resBody = response.createBody(req, operationId);
 
     // Get originator and check for errors
@@ -191,6 +192,7 @@ function deletePreSharedKey(req, res, operationId, callback) {
             resBody.meta.blockchain = originatorData.blockchain;
             resBody.meta.account = accountAddress;
 
+            // Determine key id and remove key
             const keyId = hash(originatorData.blockchain + originatorAddress + accountAddress, KEYIDLENGTH);
             resBody.meta.keyId = keyId;
             resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to delete pre-shared key');
@@ -209,8 +211,6 @@ function deletePreSharedKey(req, res, operationId, callback) {
  * @param {string} operationId the operation id as defined in the openapi definition
  * @param {logEndpointEventCb} callback
  */
-// TODO: Add endpoint
-// TODO: Update API definition
 function getAuthToken(req, res, operationId, callback) {
     const authTokenId = req.params.authTokenId;
     let resBody = response.createBody(req, operationId);
@@ -225,14 +225,12 @@ function getAuthToken(req, res, operationId, callback) {
         resBody.meta.authTokenId = authTokenId;
         resBody.meta.info = array.addItem(resBody.meta.info, 'Authentication token exists');
 
-        // Get originator data
+        // Get originator data and send response
         wfState.getOriginatorAuthToken(authTokenId, function getOriginatorAuthTokenCb(err, originatorData) {
             if (!err && !originatorData) {
                 err = new ProcessingError(`No originator found for token id ${authTokenId}`, null, 'WF_API_NO_DATA');
             }
             if (!err) resBody.meta.info = array.addItem(resBody.meta.info, 'Returning originator data for authentication token');
-
-            // Send response
             return response.sendImperative(res, err, resBody, originatorData, callback);
         });
     });
@@ -247,35 +245,23 @@ function getAuthToken(req, res, operationId, callback) {
  * @param {string} operationId the operation id as defined in the openapi definition
  * @param {logEndpointEventCb} callback
  */
-// TODO: Add endpoint
-// TODO: Update API definition
 function storeAuthToken(req, res, operationId, callback) {
-    let resBody = response.createBody(req, operationId);
-    let errors = [];
-
-    // Check token data
-    let authToken = req.body.authToken;
-    if (!authToken) errors.push('No authentication token provided');
-
-    // Check and preserve originator data
+    let authToken = req.body.authToken || null;
+    req.body.authToken = undefined;
     let originatorData = {};
-    if (req.body.name) {
-        originatorData.name = req.body.name;
-    } else {
-        errors.push('No originator name provided');
-    }
-    if (req.body.blockchain) {
-        originatorData.blockchain = req.body.blockchain;
-    } else {
-        errors.push('No blockchain provided');
-    }
+    let resBody = response.createBody(req, operationId);
+
     // Check for errors
+    let errors = [];
+    if (!authToken) errors.push('No authentication token provided');
+    if (!req.body.name) errors.push('No originator name provided');
+    if (!req.body.blockchain) errors.push('No blockchain provided');
     if (errors.length > 0) {
         let err = new ProcessingError('Invalid authentication token data', errors, 'WF_API_BAD_REQUEST');
         return response.sendImperative(res, err, resBody, originatorData, callback);
     }
     // Check for existing authentication token
-    const authTokenId = hash(originatorData.name + originatorData.blockchain + authToken, KEYIDLENGTH);
+    const authTokenId = hash(originatorData.blockchain + authToken, KEYIDLENGTH);
     resBody.meta.authTokenId = authTokenId;
     resBody.meta.resource = `/originators/tokens/${authTokenId}`;
     wfState.getKey('authTokens', authTokenId, function storeAuthTokenGetKeyCb(err, existingAuthToken) {
@@ -290,11 +276,13 @@ function storeAuthToken(req, res, operationId, callback) {
         // Store data
         wfState.upsertKey('authTokens', authTokenId, authToken);
         authToken = undefined;
+        originatorData.name = req.body.name;
+        originatorData.blockchain = req.body.blockchain;
+        if (req.body.address) originatorData.address = req.body.address;
         originatorData.authTokenId = authTokenId;
-        originatorData.authenticationValid = false;
         wfState.upsertOriginatorData(originatorData);
 
-        // Add metadata and send response
+        // Send response
         return response.sendImperative(res, err, resBody, originatorData, callback);
     });
 }
@@ -308,12 +296,11 @@ function storeAuthToken(req, res, operationId, callback) {
  * @param {string} operationId the operation id as defined in the openapi definition
  * @param {logEndpointEventCb} callback
  */
-// TODO: Add endpoint
-// TODO: Update API definition
 function deleteAuthToken(req, res, operationId, callback) {
     const authTokenId = req.params.authTokenId;
     let resBody = response.createBody(req, operationId);
 
+    // Check if key exists before deleting
     wfState.getKey('authTokens', authTokenId, function getAuthTokenGetKeyCb(err, existingAuthToken) {
         if (!err && !existingAuthToken) {
             err = new ProcessingError(`No authentication token with token id ${authTokenId}`, null, 'WF_API_NO_RESOURCE');
@@ -321,6 +308,8 @@ function deleteAuthToken(req, res, operationId, callback) {
         }
         existingAuthToken = undefined;
         resBody.meta.authTokenId = authTokenId;
+
+        // Get originator data before deleting
         wfState.getOriginatorAuthToken(authTokenId, function getOriginatorAuthTokenCb(err, originatorData) {
             if (!originatorData) originatorData = {};
             if (!err) resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to delete authentication token');
