# lib/server.js
@@ -167,7 +167,7 @@ function createEndpoints(endpointCb, callback) {
         // Message controller endpoints
         initMessagesEndpoints(endpointCb);
         initBlockchainsEndpoints(endpointCb);
-        initOriginatorsEndpints(endpointCb);
+        initOriginatorsEndpoints(endpointCb);
         initSignaturesEndpoints(endpointCb);
         initStateEndpoints(endpointCb);
 
@@ -401,16 +401,26 @@ function initBlockchainsEndpoints(endpointCb) {
  * @private
  * @param {logEndpointEventCb} endpointCb function passed to the endpoint handler to be invoked when done
  */
-function initOriginatorsEndpints(endpointCb) {
+function initOriginatorsEndpoints(endpointCb) {
     // Originators endpoints
     createEndpoint('/originators', 'GET', 'getAllOriginators', wfApiOriginatorsHandler.getOriginators, endpointCb);
     createEndpoint('/originators/:address', 'GET', 'getOriginator', wfApiOriginatorsHandler.getOriginator, endpointCb);
+
+    // Originator pre-shared keys
     createEndpoint('/originators/:address/psk/:account', 'GET', 'getPreSharedKey', wfApiOriginatorsHandler.getPreSharedKey, endpointCb);
     if (_wfApiConfig.endpoints.storePreSharedKey) {
         createEndpoint('/originators/:address/psk/:account', 'PUT', 'storePreSharedKey', wfApiOriginatorsHandler.storePreSharedKey, endpointCb);
     }
     if (_wfApiConfig.endpoints.deletePreSharedKey) {
         createEndpoint('/originators/:address/psk/:account', 'DELETE', 'deletePreSharedKey', wfApiOriginatorsHandler.deletePreSharedKey, endpointCb);
+    }
+    // Originator authentication tokens
+    createEndpoint('/originators/tokens/:authTokenId', 'GET', 'getAuthToken', wfApiOriginatorsHandler.getAuthToken, endpointCb);
+    if (_wfApiConfig.endpoints.storeAuthToken) {
+        createEndpoint('/originators/tokens', 'POST', 'storeAuthToken', wfApiOriginatorsHandler.storeAuthToken, endpointCb);
+    }
+    if (_wfApiConfig.endpoints.deleteAuthToken) {
+        createEndpoint('/originators/tokens/:authTokenId', 'DELETE', 'deleteAuthToken', wfApiOriginatorsHandler.deleteAuthToken, endpointCb);
     }
 }
 
